--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -6,3 +6,9 @@
   background-color: rgb(206, 206, 206);
   padding: 30px 150px;
 }
+
+@media screen and (max-width: 1024px) {
+  .main {
+    padding: 30px 10px;
+  }
+}
