--- a/src/components/searchbar/searchbar.module.scss
+++ b/src/components/searchbar/searchbar.module.scss
@@ -16,3 +16,10 @@
   border-bottom: 0.3rem solid transparent;
   transition: all 0.3s;
 }
+
+@media screen and (max-width: 768px) {
+  .searchinput {
+    padding: 1rem;
+    width: 300px;
+  }
+}
