changed title look

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,8 +11,9 @@
 }
 
 .title {
-  color: black;
-  font-size: 32px;
+  color: rgb(26, 53, 120);
+  font-size: 38px;
+  text-shadow: 1px 1px 4px rgb(255, 255, 255);
 }
 
 @media screen and (max-width: 768px) {
